--- a/exercicios/Ex_022/style.css
+++ b/exercicios/Ex_022/style.css
@@ -1,1 +1,19 @@
 @charset "UTF-8";
+.quadrado{
+    border: 2px solid black;
+    border-radius: 10px;
+    width: 300px;
+    height: 300px;
+    margin: auto;
+    background-color: chartreuse;
+    margin-bottom: 10px;
+}
+#q1{
+    background-color: aquamarine;
+}
+#q2{
+    background-image: linear-gradient(90deg, yellow, blue);
+}
+#q3{
+    
+}
